--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: My first Blog 
+title: Hello There!
 email: rahulg.cs.20@nitj.ac.com
 description:  hello
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
 github_username:  rahulguglani
-
+instagram_username: rahul__guglani
 # Build settings
 theme: minima
 plugins:
